@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,25 +24,23 @@
  */
 package jdk.internal.foreign.abi;
 
-import jdk.internal.foreign.NativeMemorySegmentImpl;
+import jdk.internal.foreign.AbstractMemorySegmentImpl;
 import jdk.internal.foreign.Utils;
+import jdk.internal.foreign.abi.BindingInterpreter.LoadFunc;
+import jdk.internal.foreign.abi.BindingInterpreter.StoreFunc;
 
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SegmentAllocator;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
-import java.nio.ByteOrder;
 import java.util.ArrayList;
 import java.util.Deque;
 import java.util.List;
 
-import static java.lang.foreign.ValueLayout.JAVA_BYTE;
-import static java.lang.foreign.ValueLayout.JAVA_INT_UNALIGNED;
-import static java.lang.foreign.ValueLayout.JAVA_SHORT_UNALIGNED;
+import static java.lang.foreign.ValueLayout.*;
 
 /**
  * The binding operators defined in the Binding class can be combined into argument and return value processing 'recipes'.
@@ -60,7 +58,7 @@ import static java.lang.foreign.ValueLayout.JAVA_SHORT_UNALIGNED;
  * the CONVERT_ADDRESS operator 'unboxes' a MemoryAddress to a long, but 'boxes' a long to a MemoryAddress.
  *
  * Here are some examples of binding recipes derived from C declarations, and according to the Windows ABI (recipes are
- * ABI-specific). Note that each argument has it's own recipe, which is indicated by '[number]:' (though, the only
+ * ABI-specific). Note that each argument has its own recipe, which is indicated by '[number]:' (though, the only
  * example that has multiple arguments is the one using varargs).
  *
  * --------------------
@@ -197,123 +195,15 @@ import static java.lang.foreign.ValueLayout.JAVA_SHORT_UNALIGNED;
  *
  * --------------------
  */
-public interface Binding {
-
-    /**
-     * A binding context is used as an helper to carry out evaluation of certain bindings; for instance,
-     * it helps {@link Allocate} bindings, by providing the {@link SegmentAllocator} that should be used for
-     * the allocation operation, or {@link BoxAddress} bindings, by providing the {@link SegmentScope} that
-     * should be used to create an unsafe struct from a memory address.
-     */
-    class Context implements AutoCloseable {
-        private final SegmentAllocator allocator;
-        private final SegmentScope scope;
-
-        private Context(SegmentAllocator allocator, SegmentScope scope) {
-            this.allocator = allocator;
-            this.scope = scope;
-        }
-
-        public SegmentAllocator allocator() {
-            return allocator;
-        }
-
-        public SegmentScope scope() {
-            return scope;
-        }
-
-        @Override
-        public void close() {
-            throw new UnsupportedOperationException();
-        }
-
-        /**
-         * Create a binding context from given native scope.
-         */
-        public static Context ofBoundedAllocator(long size) {
-            Arena arena = Arena.openConfined();
-            return new Context(SegmentAllocator.slicingAllocator(MemorySegment.allocateNative(size, arena.scope())), arena.scope()) {
-                @Override
-                public void close() {
-                    arena.close();
-                }
-            };
-        }
-
-        /**
-         * Create a binding context from given segment allocator. The resulting context will throw when
-         * the context's scope is accessed.
-         */
-        public static Context ofAllocator(SegmentAllocator allocator) {
-            return new Context(allocator, null) {
-                @Override
-                public SegmentScope scope() {
-                    throw new UnsupportedOperationException();
-                }
-            };
-        }
-
-        /**
-         * Create a binding context from given scope. The resulting context will throw when
-         * the context's allocator is accessed.
-         */
-        public static Context ofScope() {
-            Arena arena = Arena.openConfined();
-            return new Context(null, arena.scope()) {
-                @Override
-                public SegmentAllocator allocator() { throw new UnsupportedOperationException(); }
-
-                @Override
-                public void close() {
-                    arena.close();
-                }
-            };
-        }
-
-        /**
-         * Dummy binding context. Throws exceptions when attempting to access scope, return a throwing allocator, and has
-         * an idempotent {@link #close()}.
-         */
-        public static final Context DUMMY = new Context(null, null) {
-            @Override
-            public SegmentAllocator allocator() {
-                return SharedUtils.THROWING_ALLOCATOR;
-            }
-
-            @Override
-            public SegmentScope scope() {
-                throw new UnsupportedOperationException();
-            }
-
-            @Override
-            public void close() {
-                // do nothing
-            }
-        };
-    }
-
-    enum Tag {
-        VM_STORE,
-        VM_LOAD,
-        BUFFER_STORE,
-        BUFFER_LOAD,
-        COPY_BUFFER,
-        ALLOC_BUFFER,
-        BOX_ADDRESS,
-        UNBOX_ADDRESS,
-        DUP,
-        CAST
-    }
-
-    Tag tag();
+public sealed interface Binding {
 
     void verify(Deque<Class<?>> stack);
 
-    void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                   BindingInterpreter.LoadFunc loadFunc, Context context);
+    void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                   LoadFunc loadFunc, SegmentAllocator allocator);
 
     private static void checkType(Class<?> type) {
-        if (!type.isPrimitive() || type == void.class)
+        if (type != Object.class && (!type.isPrimitive() || type == void.class))
             throw new IllegalArgumentException("Illegal type: " + type);
     }
 
@@ -367,24 +257,49 @@ public interface Binding {
         return new Allocate(layout.byteSize(), layout.byteAlignment());
     }
 
-    static BoxAddress boxAddressRaw(long size) {
-        return new BoxAddress(size, false);
+    static BoxAddress boxAddressRaw(long size, long align) {
+        return new BoxAddress(size, align, false);
     }
 
     static BoxAddress boxAddress(MemoryLayout layout) {
-        return new BoxAddress(layout.byteSize(), true);
+        return new BoxAddress(layout.byteSize(), layout.byteAlignment(), true);
     }
 
     static BoxAddress boxAddress(long byteSize) {
-        return new BoxAddress(byteSize, true);
+        return new BoxAddress(byteSize, 1, true);
     }
 
-    static UnboxAddress unboxAddress() {
-        return UnboxAddress.INSTANCE;
+    // alias
+    static SegmentOffset unboxAddress() {
+        return segmentOffsetNoAllowHeap();
+    }
+
+    static SegmentBase segmentBase() {
+        return SegmentBase.INSTANCE;
+    }
+
+    static SegmentOffset segmentOffsetAllowHeap() {
+        return SegmentOffset.INSTANCE_ALLOW_HEAP;
+    }
+
+    static SegmentOffset segmentOffsetNoAllowHeap() {
+        return SegmentOffset.INSTANCE_NO_ALLOW_HEAP;
     }
 
     static Dup dup() {
         return Dup.INSTANCE;
+    }
+
+    static ShiftLeft shiftLeft(int shiftAmount) {
+        if (shiftAmount <= 0)
+            throw new IllegalArgumentException("shiftAmount must be positive");
+        return new ShiftLeft(shiftAmount);
+    }
+
+    static ShiftRight shiftRight(int shiftAmount) {
+        if (shiftAmount <= 0)
+            throw new IllegalArgumentException("shiftAmount must be positive");
+        return new ShiftRight(shiftAmount);
     }
 
     static Binding cast(Class<?> fromType, Class<?> toType) {
@@ -397,6 +312,8 @@ public interface Binding {
                 return Cast.INT_TO_SHORT;
             } else if (toType == char.class) {
                 return Cast.INT_TO_CHAR;
+            } else if (toType == long.class) {
+                return Cast.INT_TO_LONG;
             }
         } else if (toType == int.class) {
             if (fromType == boolean.class) {
@@ -407,6 +324,24 @@ public interface Binding {
                 return Cast.SHORT_TO_INT;
             } else if (fromType == char.class) {
                 return Cast.CHAR_TO_INT;
+            } else if (fromType == long.class) {
+                return Cast.LONG_TO_INT;
+            }
+        } else if (fromType == long.class) {
+            if (toType == byte.class) {
+                return Cast.LONG_TO_BYTE;
+            } else if (toType == short.class) {
+                return Cast.LONG_TO_SHORT;
+            } else if (toType == char.class) {
+                return Cast.LONG_TO_CHAR;
+            }
+        } else if (toType == long.class) {
+            if (fromType == byte.class) {
+                return Cast.BYTE_TO_LONG;
+            } else if (fromType == short.class) {
+                return Cast.SHORT_TO_LONG;
+            } else if (fromType == char.class) {
+                return Cast.CHAR_TO_LONG;
             }
         }
         throw new IllegalArgumentException("Unknown conversion: " + fromType + " -> " + toType);
@@ -478,8 +413,8 @@ public interface Binding {
             return this;
         }
 
-        public Binding.Builder boxAddressRaw(long size) {
-            bindings.add(Binding.boxAddressRaw(size));
+        public Binding.Builder boxAddressRaw(long size, long align) {
+            bindings.add(Binding.boxAddressRaw(size, align));
             return this;
         }
 
@@ -493,8 +428,41 @@ public interface Binding {
             return this;
         }
 
+        public Binding.Builder segmentBase() {
+            bindings.add(Binding.segmentBase());
+            return this;
+        }
+
+        public Binding.Builder segmentOffsetAllowHeap() {
+            bindings.add(Binding.segmentOffsetAllowHeap());
+            return this;
+        }
+
+        public Binding.Builder segmentOffsetNoAllowHeap() {
+            bindings.add(Binding.segmentOffsetNoAllowHeap());
+            return this;
+        }
+
         public Binding.Builder dup() {
             bindings.add(Binding.dup());
+            return this;
+        }
+
+        // Converts to long if needed then shifts left by the given number of Bytes.
+        public Binding.Builder shiftLeft(int shiftAmount, Class<?> type) {
+            if (type != long.class) {
+                bindings.add(Binding.cast(type, long.class));
+            }
+            bindings.add(Binding.shiftLeft(shiftAmount));
+            return this;
+        }
+
+        // Shifts right by the given number of Bytes then converts from long if needed.
+        public Binding.Builder shiftRight(int shiftAmount, Class<?> type) {
+            bindings.add(Binding.shiftRight(shiftAmount));
+            if (type != long.class) {
+                bindings.add(Binding.cast(long.class, type));
+            }
             return this;
         }
 
@@ -503,21 +471,19 @@ public interface Binding {
         }
     }
 
-    interface Move extends Binding {
+    sealed interface Move extends Binding {
         VMStorage storage();
         Class<?> type();
     }
 
     /**
      * VM_STORE([storage location], [type])
-     * Pops a [type] from the operand stack, and moves it to [storage location]
-     * The [type] must be one of byte, short, char, int, long, float, or double
+     *   Pops a [type] from the operand stack, and moves it to [storage location]
+     *   The [type] must be one of byte, short, char, int, long, float, or double.
+     *   [storage location] may be 'null', indicating that this value should be passed
+     *   to the VM stub, but does not have an explicit target register (e.g. oop offsets)
      */
     record VMStore(VMStorage storage, Class<?> type) implements Move {
-        @Override
-        public Tag tag() {
-            return Tag.VM_STORE;
-        }
 
         @Override
         public void verify(Deque<Class<?>> stack) {
@@ -527,22 +493,18 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
-            storeFunc.store(storage(), type(), stack.pop());
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            storeFunc.store(storage(), stack.pop());
         }
     }
 
     /**
      * VM_LOAD([storage location], [type])
-     * Loads a [type] from [storage location], and pushes it onto the operand stack.
-     * The [type] must be one of byte, short, char, int, long, float, or double
+     *   Loads a [type] from [storage location], and pushes it onto the operand stack.
+     *   The [type] must be one of byte, short, char, int, long, float, or double
      */
     record VMLoad(VMStorage storage, Class<?> type) implements Move {
-        @Override
-        public Tag tag() {
-            return Tag.VM_LOAD;
-        }
 
         @Override
         public void verify(Deque<Class<?>> stack) {
@@ -550,28 +512,24 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
             stack.push(loadFunc.load(storage(), type()));
         }
     }
 
-    interface Dereference extends Binding {
+    sealed interface Dereference extends Binding {
         long offset();
         Class<?> type();
     }
 
     /**
      * BUFFER_STORE([offset into memory region], [type], [width])
-     * Pops a [type] from the operand stack, then pops a MemorySegment from the operand stack.
-     * Stores [width] bytes of the value contained in the [type] to [offset into memory region].
-     * The [type] must be one of byte, short, char, int, long, float, or double
+     *   Pops a [type] from the operand stack, then pops a MemorySegment from the operand stack.
+     *   Stores [width] bytes of the value contained in the [type] to [offset into memory region].
+     *   The [type] must be one of byte, short, char, int, long, float, or double
      */
     record BufferStore(long offset, Class<?> type, int byteWidth) implements Dereference {
-        @Override
-        public Tag tag() {
-            return Tag.BUFFER_STORE;
-        }
 
         @Override
         public void verify(Deque<Class<?>> stack) {
@@ -582,8 +540,8 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
             Object value = stack.pop();
             MemorySegment writeAddress = (MemorySegment) stack.pop();
             if (SharedUtils.isPowerOfTwo(byteWidth())) {
@@ -624,15 +582,11 @@ public interface Binding {
 
     /**
      * BUFFER_LOAD([offset into memory region], [type], [width])
-     * Pops a MemorySegment from the operand stack,
-     * and then loads [width] bytes from it at [offset into memory region], into a [type].
-     * The [type] must be one of byte, short, char, int, long, float, or double
+     *   Pops a MemorySegment from the operand stack,
+     *   and then loads [width] bytes from it at [offset into memory region], into a [type].
+     *   The [type] must be one of byte, short, char, int, long, float, or double
      */
     record BufferLoad(long offset, Class<?> type, int byteWidth) implements Dereference {
-        @Override
-        public Tag tag() {
-            return Tag.BUFFER_LOAD;
-        }
 
         @Override
         public void verify(Deque<Class<?>> stack) {
@@ -643,8 +597,8 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
             MemorySegment readAddress = (MemorySegment) stack.pop();
             if (SharedUtils.isPowerOfTwo(byteWidth())) {
                 // exact size match
@@ -684,18 +638,13 @@ public interface Binding {
     /**
      * COPY([size], [alignment])
      *   Creates a new MemorySegment with the given [size] and [alignment],
-     *     and copies contents from a MemorySegment popped from the top of the operand stack into this new buffer,
-     *     and pushes the new buffer onto the operand stack
+     *   and copies contents from a MemorySegment popped from the top of the operand stack into this new buffer,
+     *   and pushes the new buffer onto the operand stack
      */
     record Copy(long size, long alignment) implements Binding {
-        private static MemorySegment copyBuffer(MemorySegment operand, long size, long alignment, Context context) {
-            return context.allocator().allocate(size, alignment)
+        private static MemorySegment copyBuffer(MemorySegment operand, long size, long alignment, SegmentAllocator allocator) {
+            return allocator.allocate(size, alignment)
                             .copyFrom(operand.asSlice(0, size));
-        }
-
-        @Override
-        public Tag tag() {
-            return Tag.COPY_BUFFER;
         }
 
         @Override
@@ -706,10 +655,10 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
             MemorySegment operand = (MemorySegment) stack.pop();
-            MemorySegment copy = copyBuffer(operand, size, alignment, context);
+            MemorySegment copy = copyBuffer(operand, size, alignment, allocator);
             stack.push(copy);
         }
     }
@@ -719,13 +668,8 @@ public interface Binding {
      *   Creates a new MemorySegment with the give [size] and [alignment], and pushes it onto the operand stack.
      */
     record Allocate(long size, long alignment) implements Binding {
-        private static MemorySegment allocateBuffer(long size, long alignment, Context context) {
-            return context.allocator().allocate(size, alignment);
-        }
-
-        @Override
-        public Tag tag() {
-            return Tag.ALLOC_BUFFER;
+        private static MemorySegment allocateBuffer(long size, long alignment, SegmentAllocator allocator) {
+            return allocator.allocate(size, alignment);
         }
 
         @Override
@@ -734,24 +678,44 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
-            stack.push(allocateBuffer(size, alignment, context));
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            stack.push(allocateBuffer(size, alignment, allocator));
         }
     }
 
     /**
-     * UNBOX_ADDRESS()
-     * Pops a 'MemoryAddress' from the operand stack, converts it to a 'long',
-     * with the given size, and pushes that onto the operand stack
+     * SEGMENT_BASE()
+     *   Pops a MemorySegment from the stack, retrieves the heap base object from it, or null if there is none
+     *   (See: AbstractMemorySegmentImpl::unsafeGetBase), and pushes the result onto the operand stack.
      */
-    record UnboxAddress() implements Binding {
-        static final UnboxAddress INSTANCE = new UnboxAddress();
+    record SegmentBase() implements Binding {
+        static final SegmentBase INSTANCE = new SegmentBase();
 
         @Override
-        public Tag tag() {
-            return Tag.UNBOX_ADDRESS;
+        public void verify(Deque<Class<?>> stack) {
+            Class<?> actualType = stack.pop();
+            SharedUtils.checkType(actualType, MemorySegment.class);
+            stack.push(Object.class);
         }
+
+        @Override
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            stack.push(((AbstractMemorySegmentImpl)stack.pop()).unsafeGetBase());
+        }
+    }
+
+    /**
+     * SEGMENT_OFFSET([allowHeap])
+     *   Pops a MemorySegment from the stack, retrieves the offset from it,
+     *   (See: AbstractMemorySegmentImpl::unsafeGetOffset), and pushes the result onto the operand stack.
+     *   Note that for heap segments, the offset is a virtual address into the heap base object.
+     *   If [allowHeap] is 'false' an exception will be thrown for heap segments (See SharedUtils::checkNative).
+     */
+    record SegmentOffset(boolean allowHeap) implements Binding {
+        static final SegmentOffset INSTANCE_NO_ALLOW_HEAP = new SegmentOffset(false);
+        static final SegmentOffset INSTANCE_ALLOW_HEAP = new SegmentOffset(true);
 
         @Override
         public void verify(Deque<Class<?>> stack) {
@@ -761,23 +725,22 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
-            stack.push(((MemorySegment)stack.pop()).address());
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            MemorySegment operand = (MemorySegment) stack.pop();
+            if (!allowHeap) {
+                SharedUtils.checkNative(operand);
+            }
+            stack.push(((AbstractMemorySegmentImpl)operand).unsafeGetOffset());
         }
     }
 
     /**
      * BOX_ADDRESS()
-     * Pops a 'long' from the operand stack, converts it to a 'MemorySegment', with the given size and memory scope
-     * (either the context scope, or the global scope), and pushes that onto the operand stack.
+     *   Pops a 'long' from the operand stack, converts it to a 'MemorySegment', with the given size and memory scope
+     *   (either the context scope, or the global scope), and pushes that onto the operand stack.
      */
-    record BoxAddress(long size, boolean needsScope) implements Binding {
-
-        @Override
-        public Tag tag() {
-            return Tag.BOX_ADDRESS;
-        }
+    record BoxAddress(long size, long align, boolean needsScope) implements Binding {
 
         @Override
         public void verify(Deque<Class<?>> stack) {
@@ -787,11 +750,14 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
-            SegmentScope scope = needsScope ?
-                    context.scope() : SegmentScope.global();
-            stack.push(NativeMemorySegmentImpl.makeNativeSegmentUnchecked((long) stack.pop(), size, scope));
+        @SuppressWarnings("restricted")
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            MemorySegment segment = Utils.longToAddress((long) stack.pop(), size, align);
+            if (needsScope) {
+                segment = segment.reinterpret((Arena) allocator, null); // restricted
+            }
+            stack.push(segment);
         }
     }
 
@@ -804,19 +770,60 @@ public interface Binding {
         static final Dup INSTANCE = new Dup();
 
         @Override
-        public Tag tag() {
-            return Tag.DUP;
-        }
-
-        @Override
         public void verify(Deque<Class<?>> stack) {
             stack.push(stack.peekLast());
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
             stack.push(stack.peekLast());
+        }
+    }
+
+    /**
+     * ShiftLeft([shiftAmount])
+     *   Shifts the Bytes on the top of the operand stack (64 bit unsigned).
+     *   Shifts left by the given number of Bytes.
+     */
+    record ShiftLeft(int shiftAmount) implements Binding {
+
+        @Override
+        public void verify(Deque<Class<?>> stack) {
+            Class<?> last = stack.pop();
+            SharedUtils.checkType(last, long.class);
+            stack.push(long.class);
+        }
+
+        @Override
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            long l = (long) stack.pop();
+            l <<= (shiftAmount * Byte.SIZE);
+            stack.push(l);
+        }
+    }
+
+    /**
+     * ShiftRight([shiftAmount])
+     *   Shifts the Bytes on the top of the operand stack (64 bit unsigned).
+     *   Shifts right by the given number of Bytes.
+     */
+    record ShiftRight(int shiftAmount) implements Binding {
+
+        @Override
+        public void verify(Deque<Class<?>> stack) {
+            Class<?> last = stack.pop();
+            SharedUtils.checkType(last, long.class);
+            stack.push(long.class);
+        }
+
+        @Override
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
+            long l = (long) stack.pop();
+            l >>>= (shiftAmount * Byte.SIZE);
+            stack.push(l);
         }
     }
 
@@ -829,8 +836,8 @@ public interface Binding {
     enum Cast implements Binding {
         INT_TO_BOOLEAN(int.class, boolean.class) {
             @Override
-            public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                                  BindingInterpreter.LoadFunc loadFunc, Context context) {
+            public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                                  LoadFunc loadFunc, SegmentAllocator allocator) {
                 // implement least significant byte non-zero test
                 int arg = (int) stack.pop();
                 boolean result = Utils.byteToBoolean((byte) arg);
@@ -840,10 +847,21 @@ public interface Binding {
         INT_TO_BYTE(int.class, byte.class),
         INT_TO_CHAR(int.class, char.class),
         INT_TO_SHORT(int.class, short.class),
+        INT_TO_LONG(int.class, long.class),
+
         BOOLEAN_TO_INT(boolean.class, int.class),
         BYTE_TO_INT(byte.class, int.class),
         CHAR_TO_INT(char.class, int.class),
-        SHORT_TO_INT(short.class, int.class);
+        SHORT_TO_INT(short.class, int.class),
+        LONG_TO_INT(long.class, int.class),
+
+        LONG_TO_BYTE(long.class, byte.class),
+        LONG_TO_SHORT(long.class, short.class),
+        LONG_TO_CHAR(long.class, char.class),
+
+        BYTE_TO_LONG(byte.class, long.class),
+        SHORT_TO_LONG(short.class, long.class),
+        CHAR_TO_LONG(char.class, long.class);
 
         private final Class<?> fromType;
         private final Class<?> toType;
@@ -862,11 +880,6 @@ public interface Binding {
         }
 
         @Override
-        public Tag tag() {
-            return Tag.CAST;
-        }
-
-        @Override
         public void verify(Deque<Class<?>> stack) {
             Class<?> actualType = stack.pop();
             SharedUtils.checkType(actualType, fromType);
@@ -874,8 +887,8 @@ public interface Binding {
         }
 
         @Override
-        public void interpret(Deque<Object> stack, BindingInterpreter.StoreFunc storeFunc,
-                              BindingInterpreter.LoadFunc loadFunc, Context context) {
+        public void interpret(Deque<Object> stack, StoreFunc storeFunc,
+                              LoadFunc loadFunc, SegmentAllocator allocator) {
             Object arg = stack.pop();
             MethodHandle converter = MethodHandles.explicitCastArguments(MethodHandles.identity(toType),
                     MethodType.methodType(toType, fromType));
