@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,8 @@
 
 package handle.invoker;
 
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.AddressLayout;
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemoryLayout;
@@ -39,6 +40,7 @@ import java.nio.charset.Charset;
 import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.function.Consumer;
 
 public class MethodHandleInvoker {
     public void call(MethodHandle methodHandle) throws Throwable {
@@ -57,7 +59,7 @@ public class MethodHandleInvoker {
 
     static final Map<Class<?>, Object> DEFAULT_VALUES = new HashMap<>();
 
-    static <Z> void addDefaultMapping(Class<Z> carrier, Z value) {
+    static void addDefaultMapping(Class<?> carrier, Object value) {
         DEFAULT_VALUES.put(carrier, value);
     }
 
@@ -65,14 +67,15 @@ public class MethodHandleInvoker {
         addDefaultMapping(Linker.class, Linker.nativeLinker());
         addDefaultMapping(Path.class, Path.of("nonExistent"));
         addDefaultMapping(String.class, "Hello!");
-        addDefaultMapping(Runnable.class, () -> {});
+        addDefaultMapping(Runnable.class, (Runnable)() -> {});
         addDefaultMapping(MethodHandle.class, MethodHandles.identity(int.class));
         addDefaultMapping(Charset.class, Charset.defaultCharset());
         addDefaultMapping(MethodType.class, MethodType.methodType(void.class));
         addDefaultMapping(MemorySegment.class, MemorySegment.NULL);
         addDefaultMapping(MemoryLayout.class, ValueLayout.JAVA_INT);
         addDefaultMapping(FunctionDescriptor.class, FunctionDescriptor.ofVoid());
-        addDefaultMapping(SegmentScope.class, SegmentScope.auto());
+        addDefaultMapping(Arena.class, Arena.ofAuto());
+        addDefaultMapping(MemorySegment.Scope.class, Arena.ofAuto().scope());
         addDefaultMapping(SegmentAllocator.class, SegmentAllocator.prefixAllocator(MemorySegment.ofArray(new byte[10])));
         addDefaultMapping(ValueLayout.OfByte.class, ValueLayout.JAVA_BYTE);
         addDefaultMapping(ValueLayout.OfBoolean.class, ValueLayout.JAVA_BOOLEAN);
@@ -82,8 +85,12 @@ public class MethodHandleInvoker {
         addDefaultMapping(ValueLayout.OfFloat.class, ValueLayout.JAVA_FLOAT);
         addDefaultMapping(ValueLayout.OfLong.class, ValueLayout.JAVA_LONG);
         addDefaultMapping(ValueLayout.OfDouble.class, ValueLayout.JAVA_DOUBLE);
-        addDefaultMapping(ValueLayout.OfAddress.class, ValueLayout.ADDRESS);
+        addDefaultMapping(AddressLayout.class, ValueLayout.ADDRESS);
         addDefaultMapping(SymbolLookup.class, SymbolLookup.loaderLookup());
+        addDefaultMapping(Consumer.class, (Consumer<Object>)(Object o) -> {});
+        addDefaultMapping(FunctionDescriptor.class, FunctionDescriptor.ofVoid());
+        addDefaultMapping(Linker.Option[].class, null);
+        addDefaultMapping(Runtime.class, Runtime.getRuntime());
         addDefaultMapping(byte.class, (byte)0);
         addDefaultMapping(boolean.class, true);
         addDefaultMapping(char.class, (char)0);
@@ -101,10 +108,9 @@ public class MethodHandleInvoker {
     }
 
     static Object makeArg(Class<?> clazz) {
-        Object value = DEFAULT_VALUES.get(clazz);
-        if (value == null) {
+        if (!DEFAULT_VALUES.containsKey(clazz)) {
             throw new UnsupportedOperationException(clazz.getName());
         }
-        return value;
+        return DEFAULT_VALUES.get(clazz);
     }
 }
