@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,7 +41,7 @@ import jdk.test.lib.jfr.Events;
 /**
  * @test
  * @summary Verifies that the method descriptor is correct
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.consumer.TestRecordedMethodDescriptor
@@ -65,7 +65,7 @@ public final class TestRecordedMethodDescriptor {
 
             List<RecordedEvent> recordedEvents = Events.fromRecording(recording);
             assertEquals(1, recordedEvents.size(), "Expected one event");
-            RecordedEvent recordedEvent = recordedEvents.get(0);
+            RecordedEvent recordedEvent = recordedEvents.getFirst();
 
             RecordedStackTrace stacktrace = recordedEvent.getStackTrace();
             List<RecordedFrame> frames = stacktrace.getFrames();
