@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -46,7 +46,7 @@ import jdk.jfr.consumer.RecordingStream;
 /**
  * @test
  * @summary Tests RecordingStream::onMetadata(...)
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
  * @run main/othervm jdk.jfr.api.consumer.recordingstream.TestOnMetadata
@@ -67,7 +67,7 @@ public class TestOnMetadata {
         AtomicBoolean fail = new AtomicBoolean();
         try (RecordingStream r = new RecordingStream()) {
             r.onMetadata(m -> {
-                EventType t = FlightRecorder.getFlightRecorder().getEventTypes().get(0);
+                EventType t = FlightRecorder.getFlightRecorder().getEventTypes().getFirst();
                 try {
                     m.getEventTypes().add(t);
                     System.out.println("Should not be able to modify getEventTypes()");
