@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,8 +38,8 @@ import jdk.test.lib.jfr.RecurseThread;
 
 /**
  * @test
- * @key jfr
  * @requires vm.hasJFR
+ * @requires vm.opt.DeoptimizeALot != true
  * @library /test/lib
  * @run main/othervm jdk.jfr.event.profiling.TestFullStackTrace
  */
@@ -121,7 +121,7 @@ public class TestFullStackTrace {
     public static String getTopMethodName(RecordedEvent event) {
         List<RecordedFrame> frames = event.getStackTrace().getFrames();
         Asserts.assertFalse(frames.isEmpty(), "JavaFrames was empty");
-        return frames.get(0).getMethod().getName();
+        return frames.getFirst().getMethod().getName();
     }
 
     private static void checkEvent(RecordedEvent event, int expectedDepth) throws Throwable {
@@ -144,7 +144,7 @@ public class TestFullStackTrace {
             boolean isTruncateExpected = expectedDepth > MAX_DEPTH;
             Asserts.assertEquals(isTruncated, isTruncateExpected, "Wrong value for isTruncated. Expected:" + isTruncateExpected);
 
-            String firstMethod = frames.get(frames.size() - 1).getMethod().getName();
+            String firstMethod = frames.getLast().getMethod().getName();
             boolean isFullTrace = "run".equals(firstMethod);
             String msg = String.format("Wrong values for isTruncated=%b, isFullTrace=%b", isTruncated, isFullTrace);
             Asserts.assertTrue(isTruncated != isFullTrace, msg);
