@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,11 +37,10 @@ import jdk.test.lib.jfr.Events;
  * @test
  * @summary Tests committing an event in a virtual thread created by a virtual
  *          thread
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR & vm.continuations
  * @library /test/lib /test/jdk
  * @modules jdk.jfr/jdk.jfr.internal
- * @enablePreview
  * @run main/othervm jdk.jfr.threading.TestNestedVirtualThreads
  */
 public class TestNestedVirtualThreads {
@@ -71,15 +70,15 @@ public class TestNestedVirtualThreads {
             r.stop();
             List<RecordedEvent> events = Events.fromRecording(r);
             Events.hasEvents(events);
-            System.out.println(events.get(0));
-            RecordedEvent e = events.get(0);
+            System.out.println(events.getFirst());
+            RecordedEvent e = events.getFirst();
             RecordedThread t = e.getThread();
             Asserts.assertTrue(t.isVirtual());
+            Asserts.assertEquals(t.getOSName(), null);
+            Asserts.assertEquals(t.getOSThreadId(), -1L);
             Asserts.assertEquals(t.getJavaName(), ""); // vthreads default name is the empty string.
-            Asserts.assertEquals(t.getOSName(), "");
-            Asserts.assertEquals(t.getThreadGroup().getName(), "VirtualThreads");
             Asserts.assertGreaterThan(t.getJavaThreadId(), 0L);
-            Asserts.assertEquals(t.getOSThreadId(), 0L);
+            Asserts.assertEquals(t.getThreadGroup().getName(), "VirtualThreads");
         }
     }
 }
