@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,15 +25,18 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashSet;
-import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import jdk.jpackage.test.PackageType;
+import jdk.jpackage.test.RunnablePackageTest.Action;
 import jdk.jpackage.test.PackageTest;
 import jdk.jpackage.test.JPackageCommand;
 import jdk.jpackage.test.TKit;
 import jdk.jpackage.test.Annotations.Test;
+import jdk.jpackage.test.Annotations.Parameter;
+import jdk.jpackage.test.Executor;
+import jdk.jpackage.test.JavaTool;
 import jdk.jpackage.test.LinuxHelper;
 import static jdk.jpackage.test.TKit.assertTrue;
 import static jdk.jpackage.test.TKit.assertFalse;
@@ -54,12 +57,11 @@ import static jdk.jpackage.test.TKit.assertFalse;
 /*
  * @test
  * @summary jpackage with --runtime-image
- * @library ../helpers
+ * @library /test/jdk/tools/jpackage/helpers
  * @key jpackagePlatformPackage
  * @build jdk.jpackage.test.*
  * @requires (jpackage.test.SQETest == null)
- * @modules jdk.jpackage/jdk.jpackage.internal
- * @compile RuntimePackageTest.java
+ * @compile -Xlint:all -Werror RuntimePackageTest.java
  * @run main/othervm/timeout=1400 -Xmx512m jdk.jpackage.test.Main
  *  --jpt-run=RuntimePackageTest
  */
@@ -67,12 +69,11 @@ import static jdk.jpackage.test.TKit.assertFalse;
 /*
  * @test
  * @summary jpackage with --runtime-image
- * @library ../helpers
+ * @library /test/jdk/tools/jpackage/helpers
  * @key jpackagePlatformPackage
  * @build jdk.jpackage.test.*
  * @requires (jpackage.test.SQETest != null)
- * @modules jdk.jpackage/jdk.jpackage.internal
- * @compile RuntimePackageTest.java
+ * @compile -Xlint:all -Werror RuntimePackageTest.java
  * @run main/othervm/timeout=720 -Xmx512m jdk.jpackage.test.Main
  *  --jpt-run=RuntimePackageTest.test
  */
@@ -84,26 +85,49 @@ public class RuntimePackageTest {
     }
 
     @Test
-    public static void testUsrInstallDir() {
+    @Parameter("/usr")
+    @Parameter("/usr/lib/Java")
+    public static void testUsrInstallDir(String installDir) {
         init(PackageType.LINUX)
         .addInitializer(cmd -> cmd.addArguments("--install-dir", "/usr"))
         .run();
     }
 
     @Test
-    public static void testUsrInstallDir2() {
-        init(PackageType.LINUX)
-        .addInitializer(cmd -> cmd.addArguments("--install-dir", "/usr/lib/Java"))
-        .run();
+    public static void testName() {
+        // Test that jpackage can derive package name from the path to runtime image.
+        init(PackageType.NATIVE)
+        .addInitializer(cmd -> cmd.removeArgumentWithValue("--name"))
+        // Don't attempt to install this package as it may have an odd name derived from
+        // the runtime image path. Say, on Linux for `--runtime-image foo/bar/sed`
+        // command line jpackage will create a package named 'sed' that will conflict
+        // with the default 'sed' package.
+        .run(Action.CREATE_AND_UNPACK);
     }
 
     private static PackageTest init(Set<PackageType> types) {
         return new PackageTest()
         .forTypes(types)
         .addInitializer(cmd -> {
-            cmd.addArguments("--runtime-image", Optional.ofNullable(
-                    JPackageCommand.DEFAULT_RUNTIME_IMAGE).orElse(Path.of(
-                            System.getProperty("java.home"))));
+            final Path runtimeImageDir;
+
+            if (JPackageCommand.DEFAULT_RUNTIME_IMAGE != null) {
+                runtimeImageDir = JPackageCommand.DEFAULT_RUNTIME_IMAGE;
+            } else {
+                runtimeImageDir = TKit.createTempDirectory("runtime").resolve("data");
+
+                new Executor()
+                .setToolProvider(JavaTool.JLINK)
+                .dumpOutput()
+                .addArguments(
+                        "--output", runtimeImageDir.toString(),
+                        "--add-modules", "java.desktop",
+                        "--strip-debug",
+                        "--no-header-files",
+                        "--no-man-pages")
+                .execute();
+            }
+            cmd.addArguments("--runtime-image", runtimeImageDir);
             // Remove --input parameter from jpackage command line as we don't
             // create input directory in the test and jpackage fails
             // if --input references non existant directory.
@@ -142,7 +166,8 @@ public class RuntimePackageTest {
                         "Check the package doesn't deliver [%s] copyright file",
                         copyright));
             }
-        });
+        })
+        .forTypes(types);
     }
 
     private static Set<Path> listFiles(Path root) throws IOException {
