@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -25,10 +23,7 @@
 
 package org.openjdk.bench.java.lang.foreign;
 
-import java.lang.foreign.Arena;
-import java.lang.foreign.Linker;
-import java.lang.foreign.FunctionDescriptor;
-import java.lang.foreign.MemorySegment;
+import java.lang.foreign.*;
 
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -40,7 +35,6 @@ import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
-import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
 import java.util.concurrent.TimeUnit;
 
@@ -49,25 +43,29 @@ import java.util.concurrent.TimeUnit;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
+@Fork(value = 3, jvmArgs = { "--enable-native-access=ALL-UNNAMED", "-Djava.library.path=micro/native" })
 public class PointerInvoke extends CLayouts {
 
-    Arena arena = Arena.openConfined();
-    MemorySegment segment = MemorySegment.allocateNative(100, arena.scope());
+    Arena arena = Arena.ofConfined();
+    MemorySegment segment = arena.allocate(100, 1);
 
     static {
         System.loadLibrary("Ptr");
     }
 
-    static final MethodHandle F_LONG, F_PTR;
+    static final MethodHandle F_LONG_LONG, F_PTR_LONG, F_LONG_PTR, F_PTR_PTR;
 
     static {
         Linker abi = Linker.nativeLinker();
         SymbolLookup loaderLibs = SymbolLookup.loaderLookup();
-        F_LONG = abi.downcallHandle(loaderLibs.find("func_as_long").get(),
-                FunctionDescriptor.of(C_INT, C_LONG_LONG));
-        F_PTR = abi.downcallHandle(loaderLibs.find("func_as_ptr").get(),
-                FunctionDescriptor.of(C_INT, C_POINTER));
+        F_LONG_LONG = abi.downcallHandle(loaderLibs.findOrThrow("id_long_long"),
+                FunctionDescriptor.of(C_LONG_LONG, C_LONG_LONG));
+        F_PTR_LONG = abi.downcallHandle(loaderLibs.findOrThrow("id_ptr_long"),
+                FunctionDescriptor.of(C_LONG_LONG, C_POINTER));
+        F_LONG_PTR = abi.downcallHandle(loaderLibs.findOrThrow("id_long_ptr"),
+                FunctionDescriptor.of(C_POINTER, C_LONG_LONG));
+        F_PTR_PTR = abi.downcallHandle(loaderLibs.findOrThrow("id_ptr_ptr"),
+                FunctionDescriptor.of(C_POINTER, C_POINTER));
     }
 
     @TearDown
@@ -76,18 +74,34 @@ public class PointerInvoke extends CLayouts {
     }
 
     @Benchmark
-    public int panama_call_as_long() throws Throwable {
-        return (int)F_LONG.invokeExact(segment.address());
+    public long long_to_long() throws Throwable {
+        return (long)F_LONG_LONG.invokeExact(segment.address());
     }
 
     @Benchmark
-    public int panama_call_as_address() throws Throwable {
-        return (int)F_PTR.invokeExact(segment);
+    public long ptr_to_long() throws Throwable {
+        return (long)F_PTR_LONG.invokeExact(segment);
     }
 
     @Benchmark
-    public int panama_call_as_new_segment() throws Throwable {
-        MemorySegment newSegment = MemorySegment.ofAddress(segment.address(), 100, arena.scope());
-        return (int)F_PTR.invokeExact(newSegment);
+    public long ptr_to_long_new_segment() throws Throwable {
+        MemorySegment newSegment = segment.reinterpret(100, arena, null);
+        return (long)F_PTR_LONG.invokeExact(newSegment);
+    }
+
+    @Benchmark
+    public long long_to_ptr() throws Throwable {
+        return ((MemorySegment)F_LONG_PTR.invokeExact(segment.address())).address();
+    }
+
+    @Benchmark
+    public long ptr_to_ptr() throws Throwable {
+        return ((MemorySegment)F_PTR_PTR.invokeExact(segment)).address();
+    }
+
+    @Benchmark
+    public long ptr_to_ptr_new_segment() throws Throwable {
+        MemorySegment newSegment = segment.reinterpret(100, arena, null);
+        return ((MemorySegment)F_PTR_PTR.invokeExact(newSegment)).address();
     }
 }
